When populating the "Show Remote Encoding" menu, put the check mark besides the correct saved remote encoding charset.

BUG: 186289
FIXED-IN: 4.8.0
REVIEW: 103730
(cherry picked from commit 8f231bd08134f7b1870a9c1747429c1b05174d62)